--- a/virtual_pokemon_pet/src/style.css
+++ b/virtual_pokemon_pet/src/style.css
@@ -18,25 +18,131 @@
   --warning: #ffeaa7;
 }
 
-/* body.dark {
+body.dark_mode {
   --text: #eceaf6;
   --background: #040307;
   --primary: #a79cd3;
   --secondary: #5f3172;
   --accent: #af5fb9;
-} */
+}
 
 body {
   background: var(--background);
   color: var(--text);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: auto;
+  transition: background 0.7s, color 0.7s;
 }
 
-.container {
+header .theme_mode {
+  position: relative;
+  top: 25px;
+  left: 150px;
+  font-size: 12px;
+  padding: 5px 7px;
+  background-color: var(--text);
+  color: var(--background);
+}
+
+header .theme_mode:is(:hover, :focus) {
+  font-weight: bold;
+}
+
+.pokemon_container {
+  display: block;
+  background: var(--card);
+  padding: 30px;
+  border-radius: 1rem;
+  box-shadow: 0 4px 12px var(--shadow);
+  text-align: center;
+  width: 90%;
+  max-width: 600px;
+}
+
+h1 {
+  margin-bottom: 1rem;
+  color: var(--text);
+}
+
+.pokemon-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 1.5rem;
+  margin-top: 10px;
+}
+
+.pokemon-card {
   background: var(--primary);
+  padding: 1rem;
+  border-radius: 0.75rem;
+  box-shadow: 0 2px 6px var(--shadow);
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.pokemon-card:is(:hover, :focus) {
+  transform: translateY(-5px);
+  background-color: var(--accent);
+}
+
+.pokemon-card img {
+  width: 80px;
+  height: 80px;
+}
+
+.pokemon-name {
+  margin-top: 0.5rem;
+  font-weight: bold;
+  color: #000;
+}
+
+.search_pokemon {
+  margin: 50px auto 10px;
+}
+
+.search_pokemon label {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.search_pokemon .user_input {
+  width: 100%;
+  padding: 10px;
+  margin: 20px auto 0;
+  border: 2px solid var(--accent);
+  border-radius: 10px;
+}
+
+.search_pokemon .user_input:focus {
+  outline: none;
+}
+
+.search_pokemon button {
+  display: block;
+  margin: 10px auto 0;
+  border: none;
+  padding: 10px 15px;
+  font-size: 15px;
+  background-color: var(--primary);
+}
+
+.search_pokemon button:is(:hover, :focus) {
+  background-color: var(--accent);
+  font-weight: bold;
+}
+
+.not_found {
+  color: var(--danger);
+  font-size: 14px;
+}
+
+.play_interface {
+  display: none;
+  background: var(--primary);
+  color: #000;
   border-radius: 1rem;
   padding: 2rem 3rem;
   width: 340px;
@@ -44,14 +150,29 @@ body {
   text-align: center;
 }
 
-.pokemon {
-  font-size: 5rem;
-  margin-bottom: 1rem;
+.change_pokemon {
+  position: relative;
+  top: -32px;
+  left: -140px;
+  font-size: 12px;
+  padding: 5px 7px;
+  background-color: var(--text);
+  color: var(--background);
 }
 
-h1 {
-  font-size: 1.5rem;
+h2 {
+  font-size: 18px;
   margin-bottom: 1.5rem;
+}
+
+.pokemon {
+  font-size: 5rem;
+}
+
+.pokemon p {
+  margin: -30px auto 20px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .bars {
@@ -129,10 +250,4 @@ button {
 
 button:active {
   transform: translateY(2px);
-}
-
-.user_input {
-  width: 100%;
-  margin-top: 50px;
-  padding: 10px;
 }
